add mypy settings

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,8 @@
+;[mypy]
+;ignore_missing_imports = True
+
 [mypy]
-ignore_missing_imports = True
+plugins = django-stubs
+
+[mypy.plugins.django-stubs]
+django_settings_module = --settings=config.settings.dev
