--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,8 @@
-;[mypy]
-;ignore_missing_imports = True
-
 [mypy]
-plugins = django-stubs
+;plugins = django-stubs
+ignore_missing_imports = True
+
 
 [mypy.plugins.django-stubs]
 django_settings_module = --settings=config.settings.dev
+
